--- a/mystyle.css
+++ b/mystyle.css
@@ -32,7 +32,7 @@ a {
 }
 #section1 {
     height: 1200px;
-    background: pink;
+    background: white;
     display: inline-block;
     width: 100%;
 }
@@ -70,7 +70,6 @@ h1{
 }
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #000;
   color: #eee;
 }
 .container {
@@ -88,8 +87,8 @@ body {
   overflow: hidden;
 }
 .container p span.typed-text {
-  font-weight: normal;
-  color: #dd7732;
+  font-weight: bold;
+  color: #000000;
 }
 .container p span.cursor {
   display: inline-block;
