--- a/mystyle.css
+++ b/mystyle.css
@@ -4,7 +4,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial;
+    font-family: 'Montserrat', sans-serif;
 }
 nav {
     width: 100%;
@@ -12,6 +12,7 @@ nav {
     overflow: hidden;
     position: fixed;
     top: 0;
+    z-index: 1;
 }
 ul {
     padding: 0;
@@ -31,7 +32,7 @@ a {
     font-weight: bold;
 }
 #section1 {
-    height: 1200px;
+    height: 800px;
     background: white;
     display: inline-block;
     width: 100%;
@@ -60,6 +61,15 @@ h1{
     padding: 0px;
 }
 
+.img-container {
+    width: 100%;
+    height: 1120px;
+}
+
+.img-container > img {
+    width: 100%;
+}
+
 /* typingJS */
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
@@ -68,15 +78,14 @@ h1{
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  font-family: 'Montserrat', sans-serif;
-  color: #eee;
-}
 .container {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  top: 0rem;
+  left: 5rem;
 }
 .container p {
   font-size: 3rem;
@@ -92,7 +101,7 @@ body {
 }
 .container p span.cursor {
   display: inline-block;
-  background-color: #ccc;
+  background-color: rgb(248, 73, 73);
   margin-left: 0.1rem;
   width: 3px;
   animation: blink 1s infinite;
@@ -101,9 +110,9 @@ body {
   animation: none;
 }
 @keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
+  0%  { background-color: rgb(248, 73, 73); }
+  49% { background-color: rgb(248, 73, 73); }
   50% { background-color: transparent; }
   99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
+  100%  { background-color: rgb(248, 73, 73); }
 }
