--- a/mystyle.css
+++ b/mystyle.css
@@ -39,7 +39,7 @@ a {
 }
 #section2 {
     height: 1200px;
-    background: yellow;
+    background: white;
     display: inline-block;
     width: 100%;
 }
