--- a/mystyle.css
+++ b/mystyle.css
@@ -83,12 +83,12 @@ h1{
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 0rem;
-  left: 5rem;
+  position: relative;
+  top: -60rem;
+  left: -15rem;
 }
 .container p {
-  font-size: 3rem;
+  font-size: 4rem;
   padding: 0.5rem;
   font-weight: bold;
   letter-spacing: 0.1rem;
@@ -101,18 +101,18 @@ h1{
 }
 .container p span.cursor {
   display: inline-block;
-  background-color: rgb(248, 73, 73);
+  background-color: rgb(0, 0, 0);;
   margin-left: 0.1rem;
-  width: 3px;
+  width: 10px;
   animation: blink 1s infinite;
 }
 .container p span.cursor.typing {
   animation: none;
 }
 @keyframes blink {
-  0%  { background-color: rgb(248, 73, 73); }
-  49% { background-color: rgb(248, 73, 73); }
+  0%  { background-color: rgb(0, 0, 0); }
+  49% { background-color: rgb(0, 0, 0); }
   50% { background-color: transparent; }
   99% { background-color: transparent; }
-  100%  { background-color: rgb(248, 73, 73); }
+  100%  { background-color: rgb(0, 0, 0); }
 }
